Fix CS. Resolved #2393

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,6 @@
 parameters:
-    level: 8
+    level: 9
     paths:
         - src
     inferPrivatePropertyTypeFromConstructor: true
-    ignoreErrors:
-        - message: '#class@anonymous\/Kernel\/Traits\/MockableHttpClient#'
-          path: src/
+    checkMissingIterableValueType: false
