--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-      local_dir: ./.vitepress/dist/
+      local_dir: ./docs/.vitepress/dist/
       remote_dir: /
       thread: 10
       region: ap-guangzhou
@@ -37,7 +37,7 @@ jobs:
           version: 6.0.2
           run_install: true
       - name: Build 
-        run: pnpm run build
+        run: cd docs && pnpm run build
       - name: Install coscmd
         run: |
           python -m pip install --upgrade pip
