--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
+      domain: "https://easywechat.com/"
       local_dir: ./docs/.vitepress/dist/
       remote_dir: /
       thread: 10
@@ -41,8 +42,9 @@ jobs:
       - name: Install coscmd
         run: |
           python -m pip install --upgrade pip
-          python -m pip install setuptools coscmd
+          python -m pip install setuptools coscmd tccli
       - name: Upload to cos
         run: |
           coscmd config -a "${{secrets.COS_SECRET_ID}}" -s "${{secrets.COS_SECRET_KEY}}" -b $bucket -r $region -m $thread 
           coscmd upload -r -s $local_dir $remote_dir --ignore "$ignore"
+          tccli cdn PurgePathCache --cli-unfold-argument --Paths $domain --FlushType flush
