--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,5 @@ parameters:
         - src
     inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
+    ignoreErrors:
+        - '#^Property\s+class@anonymous/Kernel/Traits/MockableHttpClient\.php.*$#is'
