--- a/docs/package.json
+++ b/docs/package.json
@@ -6,20 +6,19 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@overtrue/easywechat-theme": "^1.0.5",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.12",
     "clipboard": "^2.0.11",
     "dynamics.js": "^1.1.5",
-    "gsap": "^3.10.4",
-    "postcss": "^8.4.14",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.1.4",
-    "vitepress": "1.0.0-alpha.4",
-    "vue": "^3.2.37"
+    "gsap": "^3.11.3",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.11.41"
+    "@types/node": "^16.11.65",
+    "vitepress": "1.0.0-alpha.21",
+    "postcss": "^8.4.18",
+    "postcss-import": "^14.1.0",
+    "terser": "^5.15.1"
   },
   "pnpm": {
     "peerDependencyRules": {
