--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "ext-simplexml": "*",
     "easywechat-composer/easywechat-composer": "^1.1",
     "guzzlehttp/guzzle": "^6.2 || ^7.0",
-    "monolog/monolog": "^1.22 || ^2.0",
+    "monolog/monolog": "^1.22 || ^2.0 || ^3.0",
     "overtrue/socialite": "^3.2 || ^4.0",
     "pimple/pimple": "^3.0",
     "psr/simple-cache": "^1.0||^2.0||^3.0",
