--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,7 @@
     "postcss": "^8.4.33",
     "postcss-import": "^14.1.0",
     "terser": "^5.27.0",
-    "vitepress": "1.0.0-rc.39"
+    "vitepress": "1.1.4"
   },
   "pnpm": {
     "peerDependencyRules": {
